app/assets/stylesheets/application.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";

@import "font-awesome-sprockets";
@import "font-awesome";

body {
  font-family: 'Merriweather', serif;
}

/***************
 css for navbar
****************/
#custom-nav {
  color: orange;
  height: 70px;
  background-color: rgba(0,0,0,0);
  border: 0;
  box-shadow: none;
  z-index: 999;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-transition: background .5s ease-in-out, opacity .5s ease;
  -moz-transition: background .5s ease-in-out, opacity .5s ease;
  transition: background .5s ease-in-out, opacity .5s ease;
}

#custom-nav a {
  color: orange;
}

#custom-nav .dropdown-menu {
  border-radius: 0;
  border: none;
  border-top: 5px #f8f8f8;
  background-color: #f8f8f8;
  -webkit-box-shadow: none;
  box-shadow: none;
  padding-top: 0;
}

#custom-nav .container {
  padding-top: 10px;
  padding-bottom: 15px;
  -webkit-transition: padding-top .5s ease, padding-bottom .5s ease;
  -moz-transition: padding-top .5s ease, padding-bottom .5s ease;
  transition: padding-top .5s ease, padding-top .5s ease, padding-bottom .5s ease;
}

#custom-nav.affix {
  color: black;
  top: 0;
  min-width: 100%;
  background-color: rgb(44, 189, 154);
  opacity: 0.9;
  -webkit-transition: background .5s ease-in-out, opacity .5s ease;
  -moz-transition: background .5s ease-in-out, opacity .5s ease;
  transition: background .5s ease-in-out, opacity .5s ease;
}

#custom-nav.affix .dropdown-menu {
  border-radius: 0;
  border: none;
  border-top: 5px solid transparent;
  background-color: rgb(44, 189, 154);
  -webkit-box-shadow: none;
  box-shadow: none;
  padding-top: 0;
}

.navbar-user {
  top: 17px;
}


/******************
 css for jumbotron
*******************/
.jumbotron {
  padding-top: 20%;
  background: image-url("transamerica.jpeg") no-repeat center center;
  background-size: cover;
  height: 100%;
  width: 100%;
  color: white;
  text-align: center;
}


/************
 css for map
*************/
#custom_style {
  margin: auto;
  width: 75%;
  border: 3px solid rgb(44, 189, 154);
  border-radius: 25px;
  padding: 250px;
}

.mapit {
  margin-bottom: 20px;
}

/**********************
  css for image cards
***********************/
.row.display-flex {
  height: 500px;
  display: flex;
  flex-wrap: wrap;
}

.thumbnail {
  height: 500px;
  display: table;
  text-align: center;
}

.thumbnail img {
  height: 100%;
  width: 100%;
  display: table-cell;
  vertical-align: middle;
}

// Sign Up User Form:

.sign-up-container {
  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5) ), image-url("blueprints.jpg");
  background-size:cover;
  background-repeat:no-repeat;
  background-attachment:fixed;
  height:100%;
  height: 100vh;
  color: white;
}

.new-form{
  margin-top: 20%;
}

// Edit User Form:
.edit-user-container {
  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5) ), image-url("blueprints.jpg");
  background-size:cover;
  background-repeat:no-repeat;
  background-attachment:fixed;
  height:100%;
  height: 100vh;
  color: white;
}
.edit-form-user{
  margin-top: 20%;
}

// Login form

.login-container {
  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5) ), image-url("blueprints.jpg");
  background-size:cover;
  background-repeat:no-repeat;
  background-attachment:fixed;
  height:100%;
  height: 100vh;
  color: white;
}

.login-new-form{
    margin-top: 20%;
}

// New Story form

.new-story-container{
  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5) ), image-url("blueprints.jpg");
  background-size:cover;
  background-repeat:no-repeat;
  background-attachment:fixed;
  height:100%;
  height: 100vh;
  color: white;
}

#flash-entry{
  font-size: 20px;
  font-weight: bold;
  text-align: center;
  color: orangered;
}

.new-story-f{
  margin-top: 12%;
}

// Edit story form

.edit-story-container {
  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5) ), image-url("blueprints.jpg");
  background-size:cover;
  background-repeat:no-repeat;
  background-attachment:fixed;
  height:100%;
  height: 100vh;
  color: white;
}

.edit-story-f {
  margin-top: 15%;
}

/**********************************
 CSS for stories on building page
***********************************/
// Pagination
.paginate{
  text-align: center;
}

.paginate .pagination li span, .paginate .pagination li a {
  background-color: rgb(44, 189, 154);
  color: black;
}

// Story show page
.stories-container {
  background-image: image-url("buildingplans.jpg");
  background-size:cover;
  background-repeat:no-repeat;
  background-attachment:fixed;
  height: 100%;
  height: 100vh;
  color: white;
}

.stories-show {
  margin: auto;
  top: 200px;
  width: 75%;
  border: 3px solid rgb(44, 189, 154);
  border-radius: 25px;
  padding: 10px 20px;
  background-color: #eee;
  position: relative;
  color: black;
}
// position: relative;
// padding: 20px 0 50px 0;
// height: 100%;
// z-index: 0;
// }

.new-btn {
  text-align: center;
  margin: 10px 0;
}

.pretty-me {
  background-color: rgb(44, 189, 154);
}

.button_to {
  display: inline-block;
}

.clear-me {
  background-color: transparent;
  border: transparent;
}

.icons {
  text-align: right;
}

.stories {
  margin: 10px auto;
  width: 75%;
  border: 3px solid rgb(44, 189, 154);
  border-radius: 25px;
  padding: 10px 20px;
}

.show-me {
  height: 850px;
}

.building-tops {
  top: 90px;
  left: 7%;
}

.building-photos{
  margin-top: 20%;
  text-align: center;
}

.blue {
  background-color: rgb(108, 108, 108);
  height: 900px;
}

.red {
  background-image: image-url("buildingplans.jpg");
  background-size:cover;
  background-repeat:no-repeat;
  // background-attachment:fixed;
  height: 900px;
}

.buildfacts {
  padding-top: 100px;
  color: orange;
}

.nameme {
  background-color: rgb(199, 196, 194)
}

// New Story-Photo Form:
.new-photo-container {
  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5) ), image-url("blueprints.jpg");
  background-size:cover;
  background-repeat:no-repeat;
  background-attachment:fixed;
  height:100%;
  height: 100vh;
  color: white;
}


// flash message
.message {
  background: pink;
}

